tests/errors/sem.arg-count-mismatch.len.or
main :: () -> void {
    x := 10;
    y := 20;
    len(x, y);
};
